# WaterSpiderbot

./: README.md  main.py  pyproject.toml  sim.py  spider_test.py  spider_test.xml  spiderbot.py  test.xml
assets/models/: spider_test.xml
src/: __init__.py  spiderbot_test.py
src/spiderbot/: __init__.py  spiderbot.py  spiderleg.py
src/spiderbot/locomotion/: __init__.py  handcrafted.py  locomotion.py  simple_sin.py
tests/: test_spiderbot.py
